Fix #2990: Implement workaround to make MathExpressionInput usable on mobile devices. (#3039)
* Fix #2990: Implement workaround to make MathExpressionInput usable on mobile devices.

* Fix linting errors/minor refactoring.

* Move anonymous function call to below declaration.

* Remove debug code.

* Address review comments: change isMobileOverlayShown to mobileOverlayIsShown, move style tags to classes, rename addMobileButtonOverlay to makeGuppyMobileFriendly.

* Remove console.log call.

* Address review comments: break on (, use deviceInfoService, no space between chained function calls.

* Fix linting error.

* Alphabetize CSS.

* Replace jQuery .click() with angular ng-click.

* Add newline to end of oppia.css.

* Add username to TODO.

* Add more verbose comment.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -4598,3 +4598,22 @@ md-card.preview-conversation-skin-supplemental-card {
   right: -25px;
   top: 175px;
 }
+
+.oppia-mathexpression-input-mobile-overlay {
+  opacity: 0;
+  position: absolute;
+  z-index: 2;
+}
+
+.oppia-mathexpression-input-hidden-text {
+  /* In some versions of Chrome on Android, typing in a 0px input
+  field can cause the previous character to be selected.
+  Set to 1px and 0 opacity instead of 0px to prevent this issue. */
+  border: 0;
+  height: 1px;
+  margin: 0;
+  margin-left: -5px;
+  opacity: 0;
+  padding: 0;
+  width: 1px;
+}
